added changes tp folder structure

--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -45,7 +45,7 @@
       </div>
       <div class="col-md-3">
           <a href="{{url_for('main.user_order')}}" class="btn btn-primary -center">View orders made</a>
-<img src="https://i.pinimg.com/originals/88/fc/99/88fc995326096e697fbd66f6f4730e25.gif" alt="tororo" height="200px" width="200px"id="tororo">
+<img src="https://giphy.com/gifs/pizzahut-happy-cute-3oz8xH46dD1DSx3vNK" alt="tororo" height="200px" width="200px"id="tororo">
 </div>
 </div>
 <div class="col-md-4"> </div>
