--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,7 @@
 <div class="jumbotron">
    
   <h1>Pizza cafe</h1>
-  <h1>mmh! smell th pizza</h1>
+  <h1>mmh! smell the pizza</h1>
 </div>
 
 <hr>
@@ -50,7 +50,44 @@
                <a href="{{url_for('main.new')}}" class="btn btn-primary -center">View more</a>
            </div>
        </div>
+
+
+       <div class="row">
+        <div class="col-50">
+          <h3>Order</h3>
+          <label for="fname"><i class="fa fa-user"></i> Full Name</label>
+          <input type="text" id="fname" name="firstname" placeholder="John M. Doe">
+          <label for="email"><i class="fa fa-envelope"></i> Email</label>
+          <input type="text" id="email" name="email" placeholder="john@example.com">
+          <label for="adr"><i class="fa fa-address-card-o"></i> Address</label>
+          <input type="text" id="adr" name="address" placeholder="542 W. 15th Street">
+          <label for="city"><i class="fa fa-institution"></i> City</label>
+          <input type="text" id="city" name="city" placeholder="Nairobi">
+​
+          <div class="row">
+            <div class="col-50">
+              <label for="state">State</label>
+              <input type="text" id="state" name="state" placeholder="ke">
+            </div>
+            <div class="col-50">
+              <label for="zip">Zip</label>
+              <input type="text" id="zip" name="zip" placeholder="1000">
+            </div>
+
    </div>
+
+  
 </div>
+</div>
+​
+</body>
+</html>
+
+</div>
+
+
+
+
+
  
   {% endblock %}
