--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -17,7 +17,7 @@
         <div class="row">
           <div class= "col-md-5"> </div>
           <div class="col-md-3">
-<img src="https://i.pinimg.com/originals/88/fc/99/88fc995326096e697fbd66f6f4730e25.gif" alt="tororo" height="200px" width="200px"id="tororo">
+<img src="https://media0.giphy.com/media/3oz8xH46dD1DSx3vNK/200w.webp?cid=790b7611379c53f75236fe430551bacceb3b8230ff265163&rid=200w.webp" alt="tororo" height="200px" width="200px"id="tororo">
 </div>
 </div>
 <div clas="col-md-4"> </div>
